--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Capital - Seu investimento em um só lugar</title>
+    <meta name="description" content="Aplicativo para gerenciar seus investimentos de forma simples" />
+    <meta name="author" content="Capital" />
+    
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="/icons/icon-192x192.png" />
+    <meta name="theme-color" content="#2bc856" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Capital" />
+    <meta name="apple-mobile-web-app-orientations" content="portrait" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="48x48" href="/icons/icon-48x48.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="96x96" href="/icons/icon-96x96.png" />
+    <link rel="apple-touch-icon" sizes="128x128" href="/icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/icons/icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" sizes="256x256" href="/icons/icon-256x256.png" />
+    <link rel="apple-touch-icon" sizes="384x384" href="/icons/icon-384x384.png" />
+    <link rel="apple-touch-icon" sizes="512x512" href="/icons/icon-512x512.png" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet" />
-    <title>Capital - Seu investimento em um só lugar</title>
-    <meta name="description" content="Capital - Seu investimento em um só lugar" />
-    <meta name="author" content="Capital" />
+
     <meta property="og:title" content="Capital - Seu investimento em um só lugar" />
-    <meta property="og:description" content="Capital - Seu investimento em um só lugar" />
+    <meta property="og:description" content="Aplicativo para gerenciar seus investimentos de forma simples" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/icons/icon-192x192.png" />
   </head>
   <body>
     <div id="root"></div>
+    <script src="/ios-config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
